[workspace]
members = [
    "docker-rs",
    "dps",
    "cert-client",
    "edgelet-core",
    "edgelet-docker",
    "edgelet-hsm",
    "edgelet-http",
    "edgelet-http-mgmt",
    "edgelet-http-workload",
    "edgelet-test-utils",
    "edgelet-utils",
    "hsm-rs",
    "hsm-sys",
    "hyper-named-pipe",
    "identity-client",
    "iotedge",
    "iotedged",
    "iotedged-eventlog-messages",
    "iotedge-diagnostics",
    "iothubservice",
    "management",
    "mini-sntp",
    "provisioning",
    "signal-future",
    "systemd",
]
