[workspace]
members = [
    "docker-rs",
    "cert-client",
    "edgelet-core",
    "edgelet-docker",
    "edgelet-http",
    "edgelet-http-mgmt",
    "edgelet-http-workload",
    "edgelet-test-utils",
    "edgelet-utils",
    "hyper-named-pipe",
    "identity-client",
    "iotedge",
    "iotedged",
    "iotedged-eventlog-messages",
    "iotedge-diagnostics",
    "management",
    "mini-sntp",
    "signal-future",
    "systemd",
]
