[package]
name = "idservice-core"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.9"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
consistenttime = "0.2.0"
futures = "0.1"
failure = "0.1"
hmac = "0.5.0"
lazy_static = "1.0"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.0"
log = "0.4"
parse_duration = "2.0.1"
url = "1.7"
url_serde = "0.2"
tokio = "0.1"

edgelet-utils = { path = "../edgelet-utils" }