[package]
name = "shared-util"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2018"

[dependencies]
base64 = "0.9"
clap = "2.31"
chrono = "0.4"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
hyper = "0.12.17"
hyper-tls = { version = "0.3", optional = true }
log = "0.4"
serde_json = "1.0"
serde = "1.0"
sha2 = "0.7.0"
tokio = "0.1.8"
tokio-signal = "0.2"
native-tls = "0.2"
url = "1.7"
url_serde = "0.2"

edgelet-core = { path = "../edgelet-core" }
edgelet-utils = { path = "../edgelet-utils" }
signal-future = { path = "../signal-future" }

[target.'cfg(windows)'.dependencies]
windows-service = "0.1"
winapi = { version = "0.3.5", features = ["shellapi"] }

win-logger = { path = "../win-logger" }

[dev_dependencies]
lazy_static = "1"
rand = "0.5"
tempdir = "0.3.7"

edgelet-test-utils = { path = "../edgelet-test-utils" }

